--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Shu Zhou <ranchousc@gmail.com> (http://github.com/Rancho06)",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.25.0",
     "jquery": "^3.1.0",
     "mobx": "^2.4.4",
     "mobx-react": "^3.5.5",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
